[gd_scene load_steps=13 format=3 uid="uid://dreyuuynfn42m"]

[ext_resource type="Script" path="res://hotel/rooms/lift/lift.gd" id="1_ualsn"]
[ext_resource type="Script" path="res://hotel/rooms/lift/lift_button.gd" id="2_01krq"]
[ext_resource type="PackedScene" uid="uid://c54dwer2tf7k" path="res://hotel/rooms/lift/lift.blend" id="3_2uv1f"]
[ext_resource type="Texture2D" uid="uid://cn3umaw2h2c8v" path="res://hotel/rooms/lift/screw.png" id="3_cq3w4"]
[ext_resource type="Material" uid="uid://douhntb645irq" path="res://resources/materials/dark_wood.tres" id="5_j3nm1"]

[sub_resource type="BoxShape3D" id="BoxShape3D_yq3ou"]
size = Vector3(0.2, 0.2, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_us4s5"]
size = Vector3(0.3, 0.2, 0.1)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_p7jt8"]
data = PackedVector3Array(0, 1, -1.6, 1.6, -2, -1.6, 0, -2, -1.6, 0, 1, -1.6, 1.6, 1, -1.6, 1.6, -2, -1.6, 1.6, 1, -1.6, 1.6, -2, 1.6, 1.6, -2, -1.6, 1.6, 1, -1.6, 1.6, 1, 1.6, 1.6, -2, 1.6, 1.6, 1, 1.6, 1, -2, 1.6, 1.6, -2, 1.6, 1.6, 1, 1.6, 1, 1, 1.6, 1, -2, 1.6, 1.6, 1.9999, 1.6, 1, 1, 1.6, 1.6, 1, 1.6, 1.6, 1.9999, 1.6, 1, 1.9999, 1.6, 1, 1, 1.6, 1.6, 1.9999, -1.6, 1.6, 1, 1.6, 1.6, 1, -1.6, 1.6, 1.9999, -1.6, 1.6, 1.9999, 1.6, 1.6, 1, 1.6, 0, 1.9999, -1.6, 1.6, 1, -1.6, 0, 1, -1.6, 0, 1.9999, -1.6, 1.6, 1.9999, -1.6, 1.6, 1, -1.6, 1, 1.9999, 1.6, 0, 1, 1.6, 1, 1, 1.6, 1, 1.9999, 1.6, 0, 1.9999, 1.6, 0, 1, 1.6, 0, 1, 1.6, 1, 1, 2.3, 1, 1, 1.6, 0, 1, 1.6, 0, 1, 2.3, 1, 1, 2.3, 1, 1, 1.6, 1, -2, 2.3, 1, -2, 1.6, 1, 1, 1.6, 1, 1, 2.3, 1, -2, 2.3, 1, 1, 2.3, 1.6, -2, 2.3, 1, -2, 2.3, 1, 1, 2.3, 1.6, 1, 2.3, 1.6, -2, 2.3, 1, 1, 2.3, 1.6, 1.9999, 2.3, 1.6, 1, 2.3, 1, 1, 2.3, 1, 1.9999, 2.3, 1.6, 1.9999, 2.3, 0, 1, 2.3, 1, 1.9999, 2.3, 1, 1, 2.3, 0, 1, 2.3, 0, 1.9999, 2.3, 1, 1.9999, 2.3, 0, 1, -1.6, -1.6, -2, -1.6, -1.6, 1, -1.6, 0, 1, -1.6, 0, -2, -1.6, -1.6, -2, -1.6, -1.6, 1, -1.6, -1.6, -2, 1.6, -1.6, 1, 1.6, -1.6, 1, -1.6, -1.6, -2, -1.6, -1.6, -2, 1.6, -1.6, 1, 1.6, -1, -2, 1.6, -1, 1, 1.6, -1.6, 1, 1.6, -1.6, -2, 1.6, -1, -2, 1.6, -1.6, 1.9999, 1.6, -1, 1, 1.6, -1, 1.9999, 1.6, -1.6, 1.9999, 1.6, -1.6, 1, 1.6, -1, 1, 1.6, -1.6, 1.9999, -1.6, -1.6, 1, 1.6, -1.6, 1.9999, 1.6, -1.6, 1.9999, -1.6, -1.6, 1, -1.6, -1.6, 1, 1.6, 0, 1.9999, -1.6, -1.6, 1, -1.6, -1.6, 1.9999, -1.6, 0, 1.9999, -1.6, 0, 1, -1.6, -1.6, 1, -1.6, -1, 1.9999, 1.6, 0, 1, 1.6, 0, 1.9999, 1.6, -1, 1.9999, 1.6, -1, 1, 1.6, 0, 1, 1.6, 0, 1, 1.6, -1, 1, 2.3, 0, 1, 2.3, 0, 1, 1.6, -1, 1, 1.6, -1, 1, 2.3, -1, 1, 1.6, -1, -2, 2.3, -1, 1, 2.3, -1, 1, 1.6, -1, -2, 1.6, -1, -2, 2.3, -1, 1, 2.3, -1.6, -2, 2.3, -1.6, 1, 2.3, -1, 1, 2.3, -1, -2, 2.3, -1.6, -2, 2.3, -1, 1, 2.3, -1.6, 1.9999, 2.3, -1, 1.9999, 2.3, -1, 1, 2.3, -1.6, 1, 2.3, -1.6, 1.9999, 2.3, 0, 1, 2.3, -1, 1.9999, 2.3, 0, 1.9999, 2.3, 0, 1, 2.3, -1, 1, 2.3, -1, 1.9999, 2.3)

[sub_resource type="BoxShape3D" id="BoxShape3D_6788u"]
size = Vector3(2.6, 4, 3.7)

[sub_resource type="BoxShape3D" id="BoxShape3D_qvc51"]
size = Vector3(2, 3, 0.4)

[sub_resource type="BoxShape3D" id="BoxShape3D_wyxg4"]
size = Vector3(3.2, 4, 3.4)

[sub_resource type="BoxShape3D" id="BoxShape3D_yfpe4"]
size = Vector3(3, 4, 1)

[node name="lift" type="StaticBody3D"]
collision_layer = 7
collision_mask = 15
script = ExtResource("1_ualsn")

[node name="panel" type="CSGBox3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1.5, 1.5, 0.1)
use_collision = true
size = Vector3(0.6, 1, 0.2)

[node name="-" type="Area3D" parent="panel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, 0, 0.101)
script = ExtResource("2_01krq")
delta = -1

[node name="text" type="Label3D" parent="panel/-"]
text = "-"

[node name="collision" type="CollisionShape3D" parent="panel/-"]
shape = SubResource("BoxShape3D_yq3ou")

[node name="go" type="Area3D" parent="panel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, 0.101)
script = ExtResource("2_01krq")

[node name="text" type="Label3D" parent="panel/go"]
text = "GO"

[node name="collision" type="CollisionShape3D" parent="panel/go"]
shape = SubResource("BoxShape3D_us4s5")

[node name="current_floor" type="Label3D" parent="panel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.101)
text = "0"

[node name="+" type="Area3D" parent="panel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 0, 0.101)
script = ExtResource("2_01krq")
delta = 1

[node name="text" type="Label3D" parent="panel/+"]
text = "+"

[node name="collision" type="CollisionShape3D" parent="panel/+"]
shape = SubResource("BoxShape3D_yq3ou")

[node name="Sprite3D" type="Sprite3D" parent="panel"]
transform = Transform3D(0.996195, -0.0871558, 4.05559e-17, 0.0871558, 0.996195, -9.28915e-16, 4.05576e-17, 9.28916e-16, 1, -0.15, 0.35, 0.101)
shaded = true
double_sided = false
texture_filter = 0
texture = ExtResource("3_cq3w4")

[node name="Sprite3D2" type="Sprite3D" parent="panel"]
transform = Transform3D(0.642788, -0.766044, 3.80721e-15, 0.766044, 0.642788, -8.16458e-15, 3.80721e-15, 8.16458e-15, 1, 0.15, 0.35, 0.101)
shaded = true
double_sided = false
texture_filter = 0
texture = ExtResource("3_cq3w4")

[node name="Sprite3D3" type="Sprite3D" parent="panel"]
transform = Transform3D(0.939693, 0.34202, 6.42762e-16, -0.34202, 0.939693, 3.64528e-15, 6.42762e-16, -3.64528e-15, 1, 0.15, -0.35, 0.101)
shaded = true
double_sided = false
texture_filter = 0
texture = ExtResource("3_cq3w4")

[node name="Sprite3D4" type="Sprite3D" parent="panel"]
transform = Transform3D(-4.37114e-08, 1, 1.06581e-14, -1, -4.37114e-08, 1.06581e-14, 1.06581e-14, -1.06581e-14, 1, -0.15, -0.35, 0.101)
shaded = true
double_sided = false
texture_filter = 0
texture = ExtResource("3_cq3w4")

[node name="lift" parent="." instance=ExtResource("3_2uv1f")]

[node name="walls" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 2.98023e-08)
shape = SubResource("ConcavePolygonShape3D_p7jt8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.7, 2, 2.25)
shape = SubResource("BoxShape3D_6788u")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.7, 2, 2.25)
shape = SubResource("BoxShape3D_6788u")

[node name="doors" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 2)
shape = SubResource("BoxShape3D_qvc51")
disabled = true

[node name="lift_area" type="Area3D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="collision" type="CollisionShape3D" parent="lift_area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0.1)
shape = SubResource("BoxShape3D_wyxg4")

[node name="broken" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.30045)
collision_layer = 8
collision_mask = 0

[node name="CSGBox3D" type="CSGBox3D" parent="broken"]
transform = Transform3D(0.985178, -0.171534, 0, 0.171534, 0.985178, 0, 0, 0, 1, 0, 0.867524, 0)
material_override = ExtResource("5_j3nm1")
size = Vector3(4, 0.5, 0.2)

[node name="CSGBox3D2" type="CSGBox3D" parent="broken"]
transform = Transform3D(0.975161, 0.221497, 0, -0.221497, 0.975161, 0, 0, 0, 1, 0, 1.23034, -0.321384)
material_override = ExtResource("5_j3nm1")
size = Vector3(4, 0.5, 0.2)

[node name="CollisionShape3D" type="CollisionShape3D" parent="broken"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -0.4)
shape = SubResource("BoxShape3D_yfpe4")

[connection signal="body_entered" from="lift_area" to="." method="_on_lift_area_body_entered"]
[connection signal="body_exited" from="lift_area" to="." method="_on_lift_area_body_exited"]

[editable path="lift"]
